# mpm3d

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  gui.cpp  gui.cu  gui.cuh  gui.h  main.cpp  main.cu  mpm3d.cu  mpm3d.cuh  utils.h
py/: mpm3d.py  x_cuda  x_init  x_taichi
